Views Calendar 6.x
==================

See documentation at http://drupal.org/node/262064.

Version 2.0 dev
=================

- CCK field labels were getting lost if 'widget' was selected.
- Don't omit date fields that are not used in the date argument from being displayed on calendar nodes.
- Make sure database values with empty timezone names get defaulted to use site timezone in calendar handling.
- Views 2 moves views_query_alter() and views_pre_view() into calendar.views.inc.
- Calendar legend block should now be working correctly.
- Rework the calendar legend to incorporate imported ical node colors as well as internal colors.
- Add helper function calendar_get_node_link() to construct a node link for either an internal or external node.
- #272330 Rework css to add background colors where colors are defined and group colors together in the file.
- Add 'All day' themes for use in nodes and calendar psuedo nodes.

Version 2.0 beta4
=================

- #270318 Get date browser and calendar navigation working correctly when used in a block.
- Don't attach any displays but the right one for a given argument.
- #289981, #290328 Fixing broken handling of empty blocks that sometimes kept calendars from displaying in blocks.
- Clean up logic for creating calendar fields info.
- #268669 Improve logic for splitting multi-day nodes across calendar dates, patch by emok.
- Add new DATE_FORMAT_DATE for date-only format that is used throughout the calendar.
- Make sure week title gets translated by using date_format_date() instead of date_format().
- #289775 Day link needs a leading zero.
- Make sure calendars have a min and max date even if the date argument is not the first argument.
- Tweaked the jcalendar popup html and css a bit to keep title from popping out of the box in some themes.
- Bring the 5.2 and 6.2 calendar themes into alignment so both use the same styles and themes, including tableless back/next navigation links and themeable headers.