@@ -6,6 +6,7 @@ See documentation at http://drupal.org/node/262064.
 Version 2.0 dev
 =================
 
+- Fix day theme, there is no rows array here, it is a single rendered value.
 - CCK field labels were getting lost if 'widget' was selected.
 - Don't omit date fields that are not used in the date argument from being displayed on calendar nodes.
 - Make sure database values with empty timezone names get defaulted to use site timezone in calendar handling.
